--- a/src/page/settings-page/settings-page.css
+++ b/src/page/settings-page/settings-page.css
@@ -6,7 +6,6 @@
   flex: 1;
   min-height: 100%;
   box-sizing: border-box;
-  padding-bottom: 110px;
 }
 
 .settings-footer {
